# tanscope

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/tanscope/: __main__.py  bot.py
src/tanscope/cache/: redis_cache.py
src/tanscope/core/: config.py  constants.py  container.py
src/tanscope/db/: engine.py  models.py  stats_repository.py  tracked_repository.py
src/tanscope/handlers/: commands.py  download.py  inline.py  permissions.py  track.py
src/tanscope/services/: delivery.py
src/tanscope/services/download/: base.py  composite.py  cookies.py  errors.py  gallery_dl_source.py  instagram_source.py  media_files.py  resolver.py  service.py  ytdlp_source.py
src/tanscope/services/image_search/: base.py  duckduckgo.py  service.py
src/tanscope/services/watch/: feeds.py  poller.py  scheduler.py  service.py
