[project]
name = "tanscope"
version = "0.1.0"
description = "Telegram inline bot: image search (DuckDuckGo) and media download from TikTok, Instagram, Pinterest"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15",
    "dishka>=1.4",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "redis[hiredis]>=5.2",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "yt-dlp>=2025.1.15",
    "imageio-ffmpeg>=0.5",
    "ddgs>=8.0",
    "aiohttp>=3.11",
]

[project.optional-dependencies]
dev = ["ruff>=0.8", "mypy>=1.13"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
